adicionando os nomes que faltaram no javascript

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <ul id="qas-da-fernanda">
                 Adilson <br>
                 Amanda <br>
-                Assíria <br>
+                Assiria <br>
                 Caio <br>
                 Crislaine <br>
                 Deborah <br>
                 Edna <br>
                 Eduardo <br>
-                Felipe <br>
+                Filipe <br>
                 Gabriel <br>
                 Guilherme <br>
                 Gustavo <br>
@@ -41,11 +41,12 @@
                 Kleiton <br>
                 Lizandra <br>
                 Onishi <br>
-                Roger <br>
+                Rogger <br>
                 Joice <br>
                 Sabrina <br>
                 Stephany <br>
                 Sheila <br>
+                Steve <br>
                 Wallace
             </ul>
         </div>
